feat: get champions list
